testsuite/tests/indexed-types/should_fail/T19773.hs
module T19973 where

import T19773a
import T19773b
import T19773c
